# dual_arm_graspgen

./: CMakeLists.txt  README.md  __init__.py  arm_selection_node.py  graspgen_inference_node.py  package.xml  pointcloud_preprocessing_node.py  reachability_map_generator_urdf.py
launch/: dual_arm_grasp.launch.py  left_arm_reachability.npz  right_arm_reachability.npz
reachability_maps/: left_arm_reachability.npz  right_arm_reachability.npz
